<resources>
    <string name="app_name">QNRTC-API-Examples</string>
    <string name="type_video_audio">视频通话相关</string>
    <string name="type_audio_only">纯音频通话相关</string>
    <string name="type_CDN_streaming">CDN 直播相关</string>
    <string name="type_others">其他功能</string>
    <string name="camera_microphone_scene">摄像头采集音视频通话</string>
    <string name="custom_video_audio_scene">自定义采集音视频通话</string>
    <string name="screen_microphone_scene">屏幕录制采集音视频通话</string>
    <string name="microphone_only_scene">麦克风采集纯音频通话</string>
    <string name="custom_audio_only_scene">自定义采集纯音频通话</string>
    <string name="direct_streaming_scene">CDN 单人转推</string>
    <string name="default_transcoding_streaming_scene">CDN 合流转推（默认合流任务）</string>
    <string name="custom_transcoding_streaming_scene">CDN 合流转推（自定义合流任务）</string>
    <string name="cdn_direct_streaming">CDN 直推</string>
    <string name="audio_mixing_scene">音乐文件混音</string>
    <string name="audio_effect_mixing_scene">音效文件混音</string>
    <string name="audio_source_mixing_scene">音源文件混音</string>
    <string name="custom_message_scene">发送房间消息</string>
    <string name="multi_profile_scene">大小流</string>
    <string name="media_statistics_scene">通话质量统计</string>
    <string name="media_relay_scene">跨房媒体转发</string>
    <string name="media_recorder_scene">音视频本地录制</string>
    <string name="app_info">appID：%1$s\n用户名：%2$s\n房间号：%3$s\nSDK 版本：%4$s\n编译时间：%5$s</string>
    <string name="invalid_token_toast">非法 token</string>
    <string name="beauty_on">美颜开关</string>
    <string name="beauty_strength">美颜强度</string>
    <string name="beauty_redden">红润强度</string>
    <string name="beauty_whiten">白皙强度</string>
    <string name="camera_microphone_scene_tips">Tips：本示例仅展示一对一场景下 SDK 内置摄像头采集视频 Track 和麦克风采集音频 Track 的发布和订阅，以及基于摄像头视频 Track 的美颜功能。</string>
    <string name="audio_route_changed">音频路由改变：%1$s</string>
    <string name="connection_state_changed">房间状态改变：%1$s</string>
    <string name="publish_success">发布成功</string>
    <string name="publish_failed">发布失败:[%1$d, %2$s]</string>
    <string name="custom_av_import_scene_tips">Tips：本示例仅展示一对一场景下自定义音视频 Track 的发布和订阅功能，音视频数据源采集均使用系统采集实现。</string>
    <string name="screen_local_render_view_tips">录屏本端无预览</string>
    <string name="screen_capture_scene_tips">Tips：本示例仅展示一对一场景下 SDK 内置录屏采集视频 Track 和麦克风采集音频 Track 的发布和订阅功能。</string>
    <string name="toast_other_user_published">存在已订阅用户，不再订阅其他用户</string>
    <string name="local_window_tips">本地视图</string>
    <string name="remote_window_tips">远端视图</string>
    <string name="local_audio_window_tips">本地音频 Track</string>
    <string name="remote_audio_window_tips">远端音频 Track</string>
    <string name="microphone_only_scene_tips">Tips：本示例仅展示一对一场景下 SDK 内置麦克风采集音频 Track 的发布和订阅，以及基于音频 Track 的相关功能。</string>
    <string name="remote_audio_volume_tips">注：\n1. 音频音量的可调节范围是 0–10，调节过大可能会影响音质和损坏音频设备\n2. 获取音频音量的接口为主动调用的接口，需要您根据业务需要指定合适的时间来定时获取</string>
    <string name="local_audio_volume">本地音频采集音量</string>
    <string name="remote_audio_volume">远端音频播放音量</string>
    <string name="remote_user_left_toast">远端用户离开房间</string>
    <string name="custom_audio_only_scene_tips">Tips：本示例仅展示一对一场景下自定义音频采集 Track 的发布和订阅功能，音频数据源采集使用系统采集实现。</string>
    <string name="live_streaming_url">转推地址:</string>
    <string name="live_streaming_user">转推角色(转推该用户的音视频 Track):</string>
    <string name="local_user">本地用户</string>
    <string name="remote_user">远端用户</string>
    <string name="start_direct_live_streaming">开始单人转推</string>
    <string name="stop_direct_live_streaming">停止单人转推</string>
    <string name="publish_url_tips">请输入推流地址</string>
    <string name="invalid_publish_url_toast">非法推流地址</string>
    <string name="publish_first_toast">未发布本地音视频 Track</string>
    <string name="subscribe_first_toast">未订阅远端音视频 Track</string>
    <string name="already_exist_live_streaming_toast">请先停止转推任务</string>
    <string name="no_live_streaming_toast">请先开始转推任务</string>
    <string name="start_live_streaming_success">%1$s 开始转推成功</string>
    <string name="stop_live_streaming_success">%1$s 停止转推成功</string>
    <string name="live_streaming_error">%1$s转推出错: %2$d</string>
    <string name="direct_live_streaming_tips">Tips：本示例仅展示一对一场景下本地或远端音视频 Track 的单路转推功能，该转推经由 RTC 服务端转推实现，使用转推功能需要在七牛后台开启对应 AppId 的转推功能开关。</string>
    <string name="start_cdn_streaming">开始直播</string>
    <string name="stop_cdn_streaming">停止直播</string>
    <string name="cdn_publish_url">直播地址：</string>
    <string name="already_exist_cdn_streaming_toast">请先停止直播</string>
    <string name="streaming_stats">音频码率:%1$d\n视频码率:%2$d\n视频帧率:%3$d\n丢帧数:%4$d</string>
    <string name="cdn_streaming_tips">Tips：本示例仅展示 CDN 直推的功能，与单路转推不同，单路转推需经由 RTC 服务端的转发，而 CDN 直推则不需要。</string>
    <string name="custom_message_scene_tips">Tips：本示例仅展示一对一场景下消息的发送和接收功能。</string>
    <string name="custom_message">消息文本</string>
    <string name="custom_message_tips">请输入自定义信息</string>
    <string name="send_message">发送</string>
    <string name="custom_message_arrived">收到消息:\nUserID: %1$s\nMessageID: %2$s\nContent: %3$s\nTime: %4$s</string>
    <string name="cancel">取消</string>
    <string name="multi_profile_scene_tips">Tips：本示例仅展示一对一场景下相机 Track 的大小流发布和订阅，请注意：\n1. 开启大小流功能设置编码宽高最低为 1280 x 720。\n2. 建议发送端在仅发布单路视频 Track 的场景下，使用大小流功能。\n"3. 对于开启大小流的用户，建议保证有良好的网络环境，保证多流发送质量。</string>
    <string name="current_profile">当前订阅的 Profile:</string>
    <string name="preferred_profile">设置预期订阅的 Profile:</string>
    <string name="profile_low">Low</string>
    <string name="profile_medium">Medium</string>
    <string name="profile_high">High</string>
    <string name="none">None</string>
    <string name="set_profile">切换</string>
    <string name="profile_changed_toast">订阅视频 Profile 更新 : %1$s</string>
    <string name="media_statistics_scene_tips">Tips：本示例仅展示一对一场景下发布订阅后获取本地和远端单路音视频 Track 状态统计的功能。</string>
    <string name="local_upload_network_quality">本地上行网络质量:</string>
    <string name="local_download_network_quality">本地下行网络质量:</string>
    <string name="local_audio_track_statistics">本地音频 Track 质量:</string>
    <string name="local_video_track_statistics">本地视频 Track 质量:</string>
    <string name="remote_upload_network_quality">远端上行网络质量:</string>
    <string name="remote_download_network_quality">远端下行网络质量:</string>
    <string name="remote_audio_track_statistics">远端音频 Track 质量:</string>
    <string name="remote_video_track_statistics">远端视频 Track 质量:</string>
    <string name="uplink_bitrate">上行码率:</string>
    <string name="uplink_rtt">上行网络延时:</string>
    <string name="uplink_lost_rate">上行丢包率:</string>
    <string name="uplink_frame_rate">上行帧率:</string>
    <string name="downlink_bitrate">下行码率:</string>
    <string name="downlink_rtt">下行网络延时:</string>
    <string name="downlink_lost_rate">下行丢包率:</string>
    <string name="downlink_frame_rate">下行帧率:</string>
    <string name="profile_level">Profile 等级:</string>
    <string name="default_bitrate">0 kbps</string>
    <string name="bitrate">%1$d kbps</string>
    <string name="default_rtt">0 ms</string>
    <string name="rtt">%1$d ms</string>
    <string name="default_lost_rate">0.0%</string>
    <string name="lost_rate">%1$d%%</string>
    <string name="default_fps">0 fps</string>
    <string name="fps">%1$d fps</string>
    <string name="audio_mixer_scene_tips">Tips：本示例仅展示一对一场景下的麦克风音频的发布和订阅，以及麦克风音频 Track 的音乐混音功能。返听场景建议佩戴耳机。</string>
    <string name="audio_effects_mixing_scene_tips">Tips：本示例仅展示一对一场景下的麦克风音频的发布和订阅，以及麦克风音频 Track 的音效混音功能。返听场景建议佩戴耳机。</string>
    <string name="audio_sources_mixing_scene_tips">Tips：本示例仅展示一对一场景下的麦克风音频的发布和订阅，以及麦克风音频 Track 的音源混音功能。返听场景建议佩戴耳机。</string>
    <string name="music_url">音乐地址:</string>
    <string name="loop_times">循环次数:</string>
    <string name="start_audio_mix">Start</string>
    <string name="stop_audio_mix">Stop</string>
    <string name="pause_audio_mix">Pause</string>
    <string name="resume_audio_mix">Resume</string>
    <string name="publish_audio_mix">推送远端</string>
    <string name="no_publish_audio_mix">关闭推送</string>
    <string name="stop_all">StopAll</string>
    <string name="pause_all">PauseAll</string>
    <string name="resume_all">ResumeAll</string>
    <string name="ear_monitor_on">返听:</string>
    <string name="audio_mix_progress_text">播放进度:</string>
    <string name="audio_mix_progress">%1$s/%2$s</string>
    <string name="microphone_mix_volume">麦克风混音音量:</string>
    <string name="music_mix_volume">音乐音频混音音量:</string>
    <string name="music_play_volume">音乐音频播放音量:</string>
    <string name="audio_mix_first_toast">请先开始混音</string>
    <string name="invalid_music_url_toast">非法音乐地址</string>
    <string name="invalid_loop_times_toast">非法循环次数</string>
    <string name="prepare_music_tips">准备资源中…</string>
    <string name="audio_mix_error">混音错误: %1$d, %2$s</string>
    <string name="default_transcoding_live_streaming_scene_tips">Tips：\n1. 本示例仅展示一对一场景下使用默认合流配置创建合流任务的功能，该转推经由 RTC 服务端转推实现。\n2. 使用转推功能需要在七牛后台开启对应 AppId 的转推功能开关。\n3. 默认合流任务使用七牛控制台下该 AppId 的合流配置，无需客户端创建。\n4. 添加布局即可触发合流转推，可以到 AppId 绑定的直播空间下查看活跃流。</string>
    <string name="px">px</string>
    <string name="transcoding_track_layout">合流布局设置:</string>
    <string name="role_select_text">待添加到合流布局的角色:</string>
    <string name="video_track_layout_setting">视频 Track 布局:</string>
    <string name="layout_x">x:</string>
    <string name="layout_y">y:</string>
    <string name="layout_width">宽:</string>
    <string name="layout_height">高:</string>
    <string name="layout_z_order">层级(0 为最底层):</string>
    <string name="audio_track_layout_setting">音频 Track 布局:</string>
    <string name="audio_track_layout_tips">音频 Track 仅需配置 trackID 即可，详情可参考代码实现</string>
    <string name="add_transcoding_layout">添加合流布局</string>
    <string name="remove_transcoding_layout">移除合流布局</string>
    <string name="layout_note">注意：请保证此处的宽高设置是基于您七牛控制台上配置的合流宽高计算的，否则合流画面将被剪裁</string>
    <string name="invalid_parameters_toast">非法参数</string>
    <string name="live_streaming_not_idle_toast">合流任务已存在</string>
    <string name="transcoding_layout_updated_toast">合流布局已更新</string>
    <string name="custom_transcoding_live_streaming_scene_tips">Tips：\n1. 本示例仅展示一对一场景下使用自定义合流配置创建合流任务的功能，该转推经由 RTC 服务端转推实现。\n2. 使用转推功能需要在七牛后台开启对应 AppId 的转推功能开关。\n3. 开启转推后即可用转推地址对应的拉流地址观看合流效果。</string>
    <string name="custom_transcoding_track_layout">自定义合流配置:</string>
    <string name="publish_url">转推地址:</string>
    <string name="transcoding_config_fps">帧率:</string>
    <string name="transcoding_config_fps_unit">fps</string>
    <string name="transcoding_config_bitrate">码率:</string>
    <string name="transcoding_config_bitrate_unit">kbps</string>
    <string name="render_mode">填充方式:</string>
    <string name="render_mode_aspect_fill">ASPECT_FILL</string>
    <string name="render_mode_aspect_fit">ASPECT_FIT</string>
    <string name="render_mode_scale_fit">SCALE_FIT</string>
    <string name="watermark">水印:</string>
    <string name="background_image">背景图:</string>
    <string name="start_transcoding_live_streaming">开启合流转推</string>
    <string name="stop_transcoding_live_streaming">停止合流转推</string>
    <string name="scan_qr_code">扫描</string>
    <string name="default_audio_scene">默认</string>
    <string name="voice_chat_audio_scene">清晰语聊</string>
    <string name="sound_equalize_audio_scene">音质均衡</string>
    <string name="target_room_token">目标房间 token</string>
    <string name="target_room_token_hint">room token</string>
    <string name="start_media_relay">开始跨房媒体转发</string>
    <string name="update_media_relay">更新跨房媒体转发</string>
    <string name="update_media_relay_success">跨房媒体转发已更新</string>
    <string name="stop_media_relay">停止跨房媒体转发</string>
    <string name="media_relay_error">跨房媒体转发失败：%1$s</string>
    <string name="media_relay_error_code">跨房媒体转发失败：%1$d, %2$s</string>
    <string name="media_relay_state_changed">房间 %1$s 媒体转发状态变更：%2$s</string>
    <string name="media_relay_tips">Tips：\n1. 跨房媒体转发功能仅支持直播场景(QNClientMode.LIVE)，且 QNClientRole 为主播(BROADCASTER)的场景下使用。\n2. 更新跨房媒体转发(updateMediaRelay)功能为全量配置接口，使用时需注意调用姿势</string>
    <string name="toast_rtc_already_init">RTC 未释放完成，请稍候重试！</string>
</resources>