<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/multi_profile_layout"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.qiniu.droid.rtc.QNSurfaceView
        android:id="@+id/local_render_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/local_render_view_tips"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:background="@color/light_grey"
        android:gravity="center"
        android:text="@string/local_window_tips"
        app:layout_constraintBottom_toBottomOf="@+id/local_render_view"
        app:layout_constraintEnd_toEndOf="@+id/local_render_view"
        app:layout_constraintStart_toStartOf="@+id/local_render_view"
        app:layout_constraintTop_toTopOf="@+id/local_render_view" />

    <com.qiniu.droid.rtc.QNSurfaceView
        android:id="@+id/remote_render_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/remote_render_view_tips"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/light_grey"
        android:gravity="center"
        android:text="@string/remote_window_tips"
        app:layout_constraintBottom_toBottomOf="@+id/remote_render_view"
        app:layout_constraintEnd_toEndOf="@id/remote_render_view"
        app:layout_constraintStart_toStartOf="@+id/remote_render_view"
        app:layout_constraintTop_toTopOf="@+id/remote_render_view" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.33" />

    <View
        android:id="@+id/control_view_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/grey_round_rect_background"
        app:layout_constraintBottom_toTopOf="@+id/multi_profile_tips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3">

    </View>

    <TextView
        android:id="@+id/current_profile_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/current_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/control_view_background" />

    <TextView
        android:id="@+id/current_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/none"
        android:textColor="@color/light_blue"
        app:layout_constraintBottom_toBottomOf="@+id/current_profile_text"
        app:layout_constraintStart_toEndOf="@+id/current_profile_text"
        app:layout_constraintTop_toTopOf="@+id/current_profile_text" />

    <TextView
        android:id="@+id/preferred_profile_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:text="@string/preferred_profile"
        app:layout_constraintStart_toStartOf="@+id/current_profile_text"
        app:layout_constraintTop_toBottomOf="@+id/current_profile_text" />

    <RadioGroup
        android:id="@+id/set_profile_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/control_view_background"
        app:layout_constraintStart_toStartOf="@+id/control_view_background"
        app:layout_constraintTop_toBottomOf="@+id/preferred_profile_text">

        <RadioButton
            android:id="@+id/low_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/profile_low" />

        <RadioButton
            android:id="@+id/medium_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/profile_medium" />

        <RadioButton
            android:id="@+id/high_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/profile_high" />
    </RadioGroup>

    <Button
        android:id="@+id/switch_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="onClickSetProfile"
        android:text="@string/set_profile"
        app:layout_constraintEnd_toEndOf="@+id/set_profile_group"
        app:layout_constraintStart_toStartOf="@+id/set_profile_group"
        app:layout_constraintTop_toBottomOf="@+id/set_profile_group"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/multi_profile_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/multi_profile_scene_tips"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>